# Checkers

./: .gitignore  AIvsAI.cpp  AiPlayer.cpp  Board.cpp  Board.h  Board.py  CMakeLists.txt  CheckerBoard.cpp  CheckerBoard.h  CheckerLogic.cpp  CheckerLogic.h  CheckerMoveMaps.cpp  CheckerMoveMaps.h  ExplorerTester.cpp  GameLogic.cpp  HumanPlayer.cpp  JumpNode.cpp  JumpNode.h  JumpTree.cpp  JumpTree.h  Move.cpp  Move.h  MoveNode.cpp  MoveNode.h  MoveTester.cpp  MoveTree.cpp  MoveTree.h  PlayVsAI.cpp  README.md  Scores.cpp  Scores.h  TranspositionTable.cpp  TranspositionTable.h  ZobristHash.cpp  ZobristHash.h  database-query.c  httplib.h
Coefficient_Results/: results.json
Generation_Results/Generation_1/: results.json
Generation_Results/Generation_10/: results.json
Generation_Results/Generation_11/: results.json
Generation_Results/Generation_12/: results.json
Generation_Results/Generation_13/: results.json
Generation_Results/Generation_14/: results.json
Generation_Results/Generation_15/: results.json
Generation_Results/Generation_16/: results.json
Generation_Results/Generation_17/: results.json
Generation_Results/Generation_18/: results.json
Generation_Results/Generation_19/: results.json
Generation_Results/Generation_2/: results.json
Generation_Results/Generation_20/: results.json
Generation_Results/Generation_21/: results.json
Generation_Results/Generation_22/: results.json
Generation_Results/Generation_23/: results.json
Generation_Results/Generation_24/: results.json
Generation_Results/Generation_25/: results.json
Generation_Results/Generation_26/: results.json
Generation_Results/Generation_27/: results.json
Generation_Results/Generation_28/: results.json
Generation_Results/Generation_29/: results.json
Generation_Results/Generation_3/: results.json
Generation_Results/Generation_30/: results.json
Generation_Results/Generation_31/: results.json
Generation_Results/Generation_32/: results.json
Generation_Results/Generation_33/: results.json
Generation_Results/Generation_34/: results.json
Generation_Results/Generation_35/: results.json
Generation_Results/Generation_36/: results.json
Generation_Results/Generation_37/: results.json
Generation_Results/Generation_38/: results.json
Generation_Results/Generation_39/: results.json
Generation_Results/Generation_4/: results.json
Generation_Results/Generation_40/: results.json
Generation_Results/Generation_41/: results.json
Generation_Results/Generation_42/: results.json
Generation_Results/Generation_43/: results.json
Generation_Results/Generation_44/: results.json
Generation_Results/Generation_5/: results.json
Generation_Results/Generation_6/: results.json
Generation_Results/Generation_7/: results.json
Generation_Results/Generation_8/: results.json
Generation_Results/Generation_9/: results.json
Tournament_Results/: results.json
include/: AiPlayer.h  Board.h  CheckerBoard.h  CheckerLogic.h  CheckerMoveMaps.h  GameLogic.h  HumanPlayer.h  JumpNode.h  JumpTree.h  MCPlayer.h  Move.h  Player.h  RandomPlayer.h  Scores.h  TranspositionTable.h  ZobristHash.h
programs/: AIvsAI.cpp  CoefficientFinder.cpp  ExplorerTester.cpp  GeneticAlgorithm.cpp  MoveTester.cpp  PlayVsAI.cpp  Tournament.cpp
src/: AiPlayer.cpp  CheckerBoard.cpp  CheckerLogic.cpp  CheckerMoveMaps.cpp  GameLogic.cpp  HumanPlayer.cpp  JumpNode.cpp  JumpTree.cpp  MCPlayer.cpp  Move.cpp  RandomPlayer.cpp  Scores.cpp  TranspositionTable.cpp  ZobristHash.cpp
web/: game.html  game.js  main.html  main.js  server.cpp  styles.css
